# SynaesthetiQ-demo-test

./: .gitignore  Full Data Flow Diagram.drawio  README.md  SynaesthetiQ Full Software Diagram.drawio
src/: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  cmake_install.cmake  kilLED  kilLED.cpp  main.cpp  setup.sh
src/EnvelopeFollowing/src/: EnvelopeFollower.hpp  test.cpp
src/SynaesthetiQ-LED-Library/src/: main.cpp
src/SynaesthetiQ-LED-Library/src/SynaesthetiQ/: Colour.hpp  synaesthetiq.cpp  synaesthetiq.hpp
src/SynaesthetiQ-LED-Library/src/ws2811/: pwm.h  ws2811.h
src/SynaesthetiQ-LED-Library/test/: TestColour.cpp
src/SynaesthetiQ-audiocapture/src/: CMakeLists.txt  FFTProcessor.cpp  FFTProcessor.h
src/SynaesthetiQ-audiocapture/src/AudioCapture/: AudioCapture.cpp  AudioCapture.h  PingPongBuffer.cpp  PingPongBuffer.h
src/SynaesthetiQ-audiocapture/src/GenreClassification/: GenreClassifier.cpp  GenreClassifier.h
src/Visualiser/: Visualiser.cpp  Visualiser.hpp
src/doc/html/: AudioCapture_8cpp.html  AudioCapture_8cpp_8o_8d.html  AudioCapture_8cpp__incl.map  AudioCapture_8cpp__incl.md5  AudioCapture_8h.html  AudioCapture_8h__dep__incl.map  AudioCapture_8h__dep__incl.md5  AudioCapture_8h__incl.map  AudioCapture_8h__incl.md5  AudioCapture_8h_source.html  AudioFile_8h.html  AudioFile_8h__dep__incl.map  AudioFile_8h__dep__incl.md5  AudioFile_8h__incl.map  AudioFile_8h__incl.md5  AudioFile_8h_source.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  Colour_8hpp.html  Colour_8hpp__dep__incl.map  Colour_8hpp__dep__incl.md5  Colour_8hpp__incl.map  Colour_8hpp__incl.md5  Colour_8hpp_source.html  EnvelopeFollower_8cpp.html  EnvelopeFollower_8cpp_8o_8d.html  EnvelopeFollower_8cpp__incl.map  EnvelopeFollower_8cpp__incl.md5  EnvelopeFollower_8hpp.html  EnvelopeFollower_8hpp__dep__incl.map  EnvelopeFollower_8hpp__dep__incl.md5  EnvelopeFollower_8hpp__incl.map  EnvelopeFollower_8hpp__incl.md5  EnvelopeFollower_8hpp_source.html  FFTProcessor_8cpp.html  FFTProcessor_8cpp_8o_8d.html  FFTProcessor_8cpp__incl.map  FFTProcessor_8cpp__incl.md5  FFTProcessor_8h.html  FFTProcessor_8h__dep__incl.map  (+799 more)
src/doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+150 more)
